# Introduction_Computergraphics

./: .gitattributes  .gitignore  README.md  install_dependencies.sh  version.txt
ECG_Solution/: CMakeLists.txt  CMakePresets.json
ECG_Solution/cmake/: GlobalSettings.cmake  LinuxDependencies.cmake  SourcesList.cmake
ECG_Solution/src/: Main.cpp  Utils.h
readme/: README.html  README.md
